Add Page And Edit Link

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,19 +28,20 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">หน้าแรก</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">แจ้งซ่อม</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Repair">แจ้งซ่อม</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">วิธีการใช้งาน</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Tutorial">วิธีการใช้งาน</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">ติดต่อเรา</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ContactUS">ติดต่อเรา</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
+    
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
