Add _StaffLayout And use on All Staff Page

--- a/Views/Staff/TicketManager.cshtml
+++ b/Views/Staff/TicketManager.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewData["Title"] = "TicketManager";
 }
+@{
+    Layout = "_StaffLayout"; // Specify a custom layout
+}
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
