--- a/Views/Staff/AdminAcccountEdit.cshtml
+++ b/Views/Staff/AdminAcccountEdit.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewData["Title"] = "AdminAcccountEdit";
 }
+@{
+    Layout = "_StaffLayout"; // Specify a custom layout
+}
 
 <div class="text-center">
     <h1 class="display-4">AdminAcccountEdit</h1>
