--- a/Views/Staff/AdminAccountAdd.cshtml
+++ b/Views/Staff/AdminAccountAdd.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewData["Title"] = "AdminAccountAdd";
 }
+@{
+    Layout = "_StaffLayout"; // Specify a custom layout
+}
 
 <div class="text-center">
     <h1 class="display-4">AdminAccountAdd</h1>
