--- a/Views/Staff/AdminAccountManager.cshtml
+++ b/Views/Staff/AdminAccountManager.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewData["Title"] = "AdminAccountManager";
 }
+@{
+    Layout = "_StaffLayout"; // Specify a custom layout
+}
 
 <div class="text-center">
     <h1 class="display-4">AdminAccountManager</h1>
