--- a/Views/Staff/AgencyManager.cshtml
+++ b/Views/Staff/AgencyManager.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewData["Title"] = "AgencyManager";
 }
+@{
+    Layout = "_StaffLayout"; // Specify a custom layout
+}
 
 <div class="text-center">
     <h1 class="display-4">AgencyManager</h1>
