--- a/Views/Staff/FinishTicket.cshtml
+++ b/Views/Staff/FinishTicket.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewData["Title"] = "FinishTicket";
 }
+@{
+    Layout = "_StaffLayout"; // Specify a custom layout
+}
 
 <div class="text-center">
     <h1 class="display-4">FinishTicket</h1>
