--- a/Views/Staff/FinishTicketDetail.cshtml
+++ b/Views/Staff/FinishTicketDetail.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewData["Title"] = "FinishTicketDetail";
 }
+@{
+    Layout = "_StaffLayout"; // Specify a custom layout
+}
 
 <div class="text-center">
     <h1 class="display-4">FinishTicketDetail</h1>
