--- a/Views/Staff/Index.cshtml
+++ b/Views/Staff/Index.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
     ViewData["Title"] = "AdminLogin";
 }
+@{
+    Layout = "_StaffLayout"; // Specify a custom layout
+}
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">AdminLogin</h1>
 </div>
