--- a/Views/Staff/Profile.cshtml
+++ b/Views/Staff/Profile.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Profile";
 }
+@{
+    Layout = "_StaffLayout"; // Specify a custom layout
+}
 
 <div class="text-center">
     <h1 class="display-4">Profile</h1>
