--- a/Views/Staff/Report.cshtml
+++ b/Views/Staff/Report.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Report";
 }
+@{
+    Layout = "_StaffLayout"; // Specify a custom layout
+}
 
 <div class="text-center">
     <h1 class="display-4">Report</h1>
