--- a/Views/Staff/TicketManagerEdit.cshtml
+++ b/Views/Staff/TicketManagerEdit.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewData["Title"] = "TicketManagerEdit";
 }
+@{
+    Layout = "_StaffLayout"; // Specify a custom layout
+}
 
 <div class="text-center">
     <h1 class="display-4">TicketManagerEdit</h1>
