Edit Add Detail FrontEnd

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,12 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<br>
+<div class="text-left d-flex justify-content-between align-items-center">
+    <h4>รายการแจ้งซ่อมในระบบ</h4>
+    <div class="input-group input-group-sm" style="max-width: 300px;">
+        <input type="text" class="form-control" placeholder="ค้นหาจากชื่อเรื่องแจ้งซ่อม" aria-label="Search">
+        <button class="btn btn-primary text-white" type="button">
+            <i class="fas fa-search"></i> Search
+        </button>
+    </div>
 </div>
