Add ContactUS Detail and edit Repair Page

--- a/Views/Home/ContactUS.cshtml
+++ b/Views/Home/ContactUS.cshtml
@@ -16,6 +16,7 @@
             height: 100%;
             border: 0;
         }
+
     </style>
     
     <div class="map-container">
@@ -26,3 +27,8 @@
             referrerpolicy="no-referrer-when-downgrade">
         </iframe>
     </div>
+    <br>
+    <div class="d-flex justify-content-center align-items-center contact-us-container">
+        <img src="~/image/ContactUS.png" class="img-fluid contact-us-picture">
+    </div>
+
