--- a/Views/Home/Repair.cshtml
+++ b/Views/Home/Repair.cshtml
@@ -83,7 +83,7 @@
                 <label for="problemDescription" class="form-label">ปัญหาที่พบ</label>
                 <textarea class="form-control" id="problemDescription" rows="4" placeholder="กรุณากรอกปัญหาที่พบ"></textarea>
             </div>
-            <div>
+            <div style="display: flex; justify-content: flex-end;">
             <button type="submit" class="btn btn-primary ms-auto">ส่งข้อมูล</button>
             </div>
         </form>
