--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2568 - Repair_Notification_System - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2568 - ศูนย์คอมพิวเตอร์ มหาวิทยาลัยราชภัฏอุบลราชธานี</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
