--- a/Views/Home/Tutorial.cshtml
+++ b/Views/Home/Tutorial.cshtml
@@ -1,6 +1,5 @@
-﻿@{
-    ViewData["Title"] = "Privacy Policy";
-}
-<h1>@ViewData["Title"]</h1>
-
-<p>Use this page to detail your site's Tutorial policy.</p>
+﻿    <br><br>
+    
+    <div class="d-flex justify-content-center align-items-center contact-us-container">
+        <img src="~/image/Tutorial.png" class="img-fluid contact-us-picture">
+    </div>
