--- a/Views/Staff/AdminAccountEdit.cshtml
+++ b/Views/Staff/AdminAccountEdit.cshtml
@@ -22,12 +22,32 @@
   }
   .btn-green {
     background-color: #28a745; /* Green button */
-    color: black;
+    color: white;
     border: 2px solid white;
     border-radius: 5px;
   }
   .btn-green:hover {
     background-color: #218838;
+    color: white;
+  }
+    .btn-red {
+    background-color: #e71616; /* Green button */
+    color: white;
+    border: 2px solid white;
+    border-radius: 5px;
+  }
+  .btn-red:hover {
+    background-color: #e71616;
+    color: white;
+  }
+    .btn-blue {
+    background-color: #2b18d3; /* Green button */
+    color: white;
+    border: 2px solid white;
+    border-radius: 5px;
+  }
+  .btn-blue:hover {
+    background-color: #2b18d3;
     color: white;
   }
 </style>
@@ -77,7 +97,9 @@
         </div>
         <!-- Add Account Button -->
         <div class="text-center mt-3">
-          <button type="button" class="btn btn-green">เพิ่มบัญชี</button>
+          <button type="button" class="btn btn-blue">รีเซ็ตรหัสผ่าน</button>
+          <button type="button" class="btn btn-green">แก้ไขข้อมูล</button>
+          <button type="button" class="btn btn-red">ลบบัญชี</button>
         </div>
       </form>
     </div>
