--- a/Views/Home/Repair.cshtml
+++ b/Views/Home/Repair.cshtml
@@ -1,8 +1,11 @@
 ﻿    <style>
         .header-bg {
-            background-color: #3be8ff;
-            padding: 20px;
-            border-radius: 5px;
+            background-color: #007BFF; /* Blue background */
+    color: white;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px 10px 0 0;
+    text-shadow: -2px -2px 0 black, 2px -2px 0 black, -2px 2px 0 black, 2px 2px 0 black; /* Black stroke */
         }
         .disabled-field {
             background-color: #f0f0f0; /* Light gray */
@@ -85,6 +88,8 @@
             </div>
         </form>
     </div>
+
+
 
     <script>
         // Get today's date in the format DD/MM/YYYY
