--- a/Views/Staff/TicketManagerEdit.cshtml
+++ b/Views/Staff/TicketManagerEdit.cshtml
@@ -56,9 +56,7 @@
                 </div>
                 <div class="col-md-6">
                     <label for="problemType" class="form-label">ประเภทของปัญหา</label>
-                    <div class="custom-select">
-                        <select class="form-control" id="problemType" disabled></select>
-                    </div>
+                    <input type="problemType" class="form-control" id="problemType" disabled>
                 </div>
             </div>
             <div class="row mb-3">
