--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -32,19 +32,22 @@
 <div class="text-left d-flex justify-content-between align-items-center">
     <h4>รายการแจ้งซ่อมในระบบ</h4>
     <div class="input-group input-group-sm" style="max-width: 300px;">
-        <input type="text" class="form-control" placeholder="ค้นหาจากชื่อเรื่องแจ้งซ่อม" aria-label="Search">
-        <button class="btn btn-primary text-white" type="button">
-            <i class="fas fa-search"></i> Search
+        @using (Html.BeginForm("Index", "Home", FormMethod.Get))
+        {
+            <input type="text" name="searchTerm" value="@ViewData["SearchTerm"]" class="form-control" placeholder="ค้นหาจากชื่อผู้แจ้งซ่อม" aria-label="Search">
+        }
+        <button class="btn btn-primary text-white" type="submit">
+                <i class="fas fa-search"></i> ค้นหา
         </button>
     </div>
 </div>
 
 <div class="container mt-5">
     <div class="header-bg text-center mb-4">
-        @foreach (var ticket in Model)
+        @foreach (var ticket in Model.OrderByDescending(t => t.StartDate))
         {
-            // Check if StartDate and EndDate are not null and the difference is less than or equal to 7 days
-            if (ticket.StartDate != null && ticket.EndDate != null)
+            // Show tickets with EndDate within 14 days
+            if (ticket.EndDate != null)
             {
                 var timeSpan = ticket.EndDate - ticket.StartDate;
                 if (timeSpan.HasValue && timeSpan.Value.Days <= 14)
@@ -63,6 +66,23 @@
                     </div>
                     <hr/>
                 }
+            }
+            // Show tickets without EndDate
+            else
+            {
+                <div class="row">
+                    <div class="col-3 text-start responsive-text">เรื่อง</div>
+                    <div class="col-9 text-end responsive-text">@ticket.Topic (@ticket.Name)</div>
+                </div>
+                <div class="row">
+                    <div class="col-3 text-start responsive-text">สถานะ</div>
+                    <div class="col-9 text-end responsive-text">@ticket.State</div>
+                </div>
+                <div class="row">
+                    <div class="col-3 text-start responsive-text">วันที่แจ้ง</div>
+                    <div class="col-9 text-end responsive-text">@ticket.StartDate?.ToString("dd/MM/yyyy")</div>
+                </div>
+                <hr/>
             }
         }
     </div>
